--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<html>
+<head>
+ <link rel="stylesheet" href="style.css">
+ <title>My Personal Website</title>
+</head>
+<body>
+  <h1 class="splash">Hello World!</h1>
