--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@
   <h1 class="splash">Hello World!</h1>
   <h2>I am a <strong>full stack</strong> software developer.</h2>
   <h3>Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
+  </body>
+  </html>
