--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1 class="splash">Hello World!</h1>
-  <h2>I am a <strong>full stack</strong> software developer.</h2>
-  <h3>Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
+  <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
+  <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
   </body>
   </html>
