--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <h1 class="splash">Hello World!</h1>
   <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
-  <img src="happy_ak.jpg" width=600px height=900px>
+  <img src="happy_ak.jpg">
   </body>
   </html>
