--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
   <img src="happy_ak.jpg">
+  <p class="splash">Here are demo videos for some of the apps I've built, and also source code</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sfc8QcCNWx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   </html>
