--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <img src="happy_ak.jpg">
   <p class="splash">Here are demo videos for some of the apps I've built, and also source code</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/sfc8QcCNWx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p class="splash"><a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p>
   </body>
   </html>
