--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
- <link rel="stylesheet" href="style.css">
- <title>My Personal Website</title>
+  <link rel="stylesheet" href="style.css">
+  <title>My Personal Website</title>
 </head>
 <body>
+  <div class="diamond">
   <h1 class="splash">Hello World!</h1>
+  </div>
   <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
   <img src="happy_ak.jpg">
@@ -13,5 +15,5 @@
   <p class="splash"><a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p>
   <p class="splash"><a href="https://medium.com/@adamkearney124/">My Blog! Read it here.</a></p>
 
-  </body>
-  </html>
+</body>
+</html>
