--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
   <img src="happy_ak.jpg">
   <p class="splash">Here are demo videos for some of the apps I've built, and also source code</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/sfc8QcCNWx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p class="splash"><a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p>
+  <table>
+    <tr>
+      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/sfc8QcCNWx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><p class="splash"><a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p></td>
+    </tr>
+  </table>
+
+  <br>
+  <hr>
   <p class="splash"><a href="https://medium.com/@adamkearney124/">My Blog! Read it here.</a></p>
 
 </body>
