--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <table>
     <tr>
       <td><iframe width="560" height="315" src="https://www.youtube.com/embed/sfc8QcCNWx8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-      <td><p class="splash"><a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p></td>
+      <td><p class="splash">
+        This Ruby-based Command Line Interface Application allows users to create music reviews. It allows users to write, post, and edit reviews of bands and read them on a bulletin board style list. They can also delete posts <br>
+        <a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p></td>
     </tr>
   </table>
 
