--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="diamond">
-  <h1 class="splash">Hello World!</h1>
+  <h1 class="splash" align="center">Hello World!</h1>
   </div>
   <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
