--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <title>My Personal Website</title>
 </head>
 <body>
-  <div class="diamond">
-    <div class="hw">
-      <h1 class="splash">Hello World!</h1>
-    </div>
+  <h1 class="splash">Hello World!</h1>
+  <div class="yinyang">
   </div>
   <h2 class="splash">I am a <strong>full stack</strong> software developer.</h2>
   <h3 class="splash">Specializing in Ruby, Ruby on Rails, JavaScript, and React</h3>
