--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         This Ruby-based Command Line Interface Application allows users to create music reviews. It allows users to write, post, and edit reviews of bands and read them on a bulletin board style list. They can also delete posts <br>
         <a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p></td>
     </tr>
+    <tr>
+      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/Vs52g4TCqig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><p class = "splash">
+        This JavaScript single page application lets users add cocktails to a menu featuring different days of the week. Users can add and delete drinks for any day of the week. <br>
+        <a href="https://github.com/aklives/weekly-cocktail-menu"> Source Code</a></p></td>
   </table>
 
   <br>
