--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <a href="https://github.com/aklives/guided-module-one-project-assessment-dumbo-web-career-040119">Source Code</a></p></td>
     </tr>
     <tr>
+      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/bl1C5ZdMTyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><p class="splash">
+        This Ruby on Rails fullstack application lets you create a playlist from a list of the greatest video games of all time. <br>
+        <a href="https://github.com/MBartl/favigames">Source Code</a></p></td>
+    <tr>
       <td><iframe width="560" height="315" src="https://www.youtube.com/embed/Vs52g4TCqig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td><p class = "splash">
         This JavaScript single page application lets users add cocktails to a menu featuring different days of the week. Users can add and delete drinks for any day of the week. <br>
