--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <td><p class = "splash">
         This JavaScript single page application lets users add cocktails to a menu featuring different days of the week. Users can add and delete drinks for any day of the week. <br>
         <a href="https://github.com/aklives/weekly-cocktail-menu"> Source Code</a></p></td>
+      <td><iframe width="560" height="315" src="https://www.youtube.com/embed/eBz0NqEwlj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><p class = "splash">
+        This ReactJS project allows users to enter their goto $1 slice spots into a database which is linked to an interactive map. <br>
+        <a href="https://github.com/aklives/one-dollar-pizza"> Source Code</a></p></td>
   </table>
 
   <br>
