--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <tr>
       <td><iframe width="560" height="315" src="https://www.youtube.com/embed/eBz0NqEwlj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td><p class = "splash">
-        This ReactJS project allows users to enter their goto $1 slice spots into a database which is linked to an interactive map. <br>
+        This ReactJS project allows users to enter their goto $1 slice spots into a database which is linked to an interactive map. Users can also leave reviews of their pizza places. <br>
         <a href="https://github.com/aklives/one-dollar-pizza"> Source Code</a></p></td>
     </tr>
   </table>
