--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
-  <title>My Personal Website</title>
+  <title>Adam's Demo Videos</title>
 </head>
 <body>
   <h1 class="splash">Hello World!</h1>
